# Medidor-de-Qualidade-de-agua

./: CMakeLists.txt  Medidor_pH.c  README.md
